# anchor-me

./: .gitignore  README.md  START-HERE.md  config.example.json  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  SLACK.md
focus_guardian/: __init__.py  analyzer.py  cli.py  clipboard_intel.py  coach.py  drift.py  drift_config.py  familiar.py  guardian.py  llm.py  monitor.py  notify.py  paths.py  profiles.py  review.py  slack_bot.py  slack_client.py  slack_commands.py  synthesis.py  timeline.py
scripts/: com.focusguardian.guardian.plist.template  com.focusguardian.monitor.plist.template  install-launchd.sh
