[project]
name = "focus-guardian"
version = "0.1.0"
description = "Portable productivity companion powered by Familiar screen context"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fg = "focus_guardian.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["focus_guardian*"]
